# sw-rs

./: Cargo.toml  README.md
examples/: basic.rs  reserialize.rs  serialize.rs  vehicle_basic.rs
samples/: blank2.xml  escape_test.xml  min_io.xml  mul_const.xml  not.xml  one_of_every_default.xml
samples/microcontroller/: Quadcopter Controller 2.xml  Seaplane Controller.xml  blank.xml  composite_test.xml  min_io2.xml  one_block.xml
samples/vehicle/: sweditor3.xml  sweditor4.xml  sweditor5.xml  sweditor6.xml  sweditsym.xml
src/: lib.rs  types.rs
src/component/: definition.rs  instance.rs
src/components/: mod.rs
src/mc_serde/: microcontroller.rs  mod.rs
src/mesh/: mod.rs
src/microcontroller/: mod.rs  types.rs
src/microcontroller/components/: mod.rs
src/microcontroller/mc_serde/: microcontroller.rs  mod.rs
src/microcontroller/util/: mod.rs  serde_utils.rs
src/util/: fakemap_hack.rs  mod.rs  serde_utils.rs
src/vehicle/: body.rs  mod.rs
tests/: samples.rs
