[package]
name = "sw-mc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
quick-xml = { version = "0.27", features = ["serialize"] }
paste = "1.0"
fakemap = "0.2"

[dev-dependencies]
pretty_assertions = "1.3"

[patch.crates-io]
# adds quote level setting and automatically uses single quotes for attributes containing double quotes
# see https://github.com/tafia/quick-xml/issues/362
quick-xml = { path = "../rust/quick-xml" }
# removes duplicate check on insert
fakemap = { git = "https://github.com/PieKing1215/fakemap_dup" }