[package]
name = "sw-mc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
# adds quote level setting, allows attribute names to start with numbers, uses single quotes for attributes containing double quotes
# see https://github.com/tafia/quick-xml/issues/362
quick-xml = { git = "https://github.com/PieKing1215/quick-xml", features = ["serialize"] }
paste = "1.0"
# removes duplicate check on insert
fakemap = { git = "https://github.com/PieKing1215/fakemap_dup" }
dirs = "4.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.3"
